# tinyxpc

./: README.md  meson.build  meson_options.txt  tinyxpc_spec.md
include/tinyxpc/: base.h  proto_msg.h  proto_negotiation.h  tinyxpc.h  xpc_relay.h
src/: tinyxpc.c  xpc_relay.c
tests/: test_relay.c
tests/support/: crc.c  crc.h
